syntax = "proto3";

package package1.namespace1;

enum TestEnum {
  UNSPECIFIED = 0;
}

message Thing1 {
}