syntax = "proto3";

package package1.namespace1;

message Thing2 {
}